# worldsim-project

./: .gitignore  .yamllint.yml  README.md  icon.svg.import  project.godot  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
addons/msgpack/: msgpack.gd
art/tiles/: ascii_tiles.png.import  ascii_tiles.tres  using_tilesets_kenney_abstract_platformer_tile_sheet.webp.import
core/worldgen/: erosion.py  sea_level.py  tectonics.py  volcano.py
scenes/: TerrainAscii.tscn
scripts/: TerrainAscii.gd  TerrainLoader.gd  common_utils.gd  server.py  world_sim.gd
tests/: conftest.py  run_100yrs.gd  test_common_util.py  test_msgpack.py  test_server.py  test_smoke.py  test_terrain_ascii.py  test_terrain_loader.py
